# otus-basic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
06-otus-basic-cmake/: CMakeLists.txt
06-otus-basic-cmake/example1/: CMakeLists.txt
24-otus-basic-thread/: CMakeLists.txt  ex0_sum.cpp  ex0_sum_thread.cpp  ex0_sum_thread_arr.cpp  ex1_tickets.cpp  ex1_tickets_mutex.cpp  ex2_bank.cpp
25-otus-basic-thread/: linked_list.cpp  naive_thread_safe_linked_list.cpp
26-otus-basic-async/: package_task.cpp
